# protoUI

./: .automaker-lock  .dockerignore  .gitignore  Dockerfile  README.md  SOUL.md  app.py  docker-compose.yml  package.json  pyproject.toml
.automaker/settings/: worktree-init
.github/workflows/: ci.yml
chat/: agent.py  backend.py  tools.py
config/: SOUL.md
memory/: context.py  graphiti.py
skills/: loader.py
voice/: agent.py  llm.py  text_chat.py
