[project]
name = "ava"
version = "0.2.0"
description = "Ava — conversational protoAgent with voice + text chat + A2A surface"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate",
    "gradio>=5.0",
    "fastrtc[vad]>=0.0.10",
    "kokoro>=0.9",
    "openai>=1.0",
    "httpx",
    "soundfile",
    "soxr",
    "numpy",
    "vllm>=0.18",
    "peft",
    "duckduckgo-search>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
protovoice = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
